--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -109,6 +109,105 @@ BiocParallel::bplapply(gbs,                 strand_randomisation_index  ) |> pai
 BiocParallel::bplapply(gbs, \(g) swap(g) |> strand_randomisation_index()) |> pairs2Kable6x3()
 ```
 
+In order to assess the extent to which the strand randomisation index may vary in a given pair of genomes, I do a simple permutation test. Given a `GBreaks` object, reverse the strand of a randomly-selected number of alignments drawn from a random distribution.
+
+You can evaluate the relative frequency of "flips", i.e., a possible inversion, by counting the frequency of changes in the strand. I check this quickly below. Then I use the shape of this distribution to select a random number of flips to make, then make 10,000 permutations of the alignment with the randomly-selected number of flips, then calculate strand randomization indices on these randomly-flipped alignments. 
+
+```{r strand_randomisation_permutation_test}
+# Some libraries for fitting distributions...
+library(fitdistrplus) |> suppressPackageStartupMessages()
+library(stats4)       |> suppressPackageStartupMessages()
+library(MASS)         |> suppressPackageStartupMessages()
+library(survival)     |> suppressPackageStartupMessages()
+library(actuar)       |> suppressPackageStartupMessages()
+library(distrMod)     |> suppressPackageStartupMessages()
+library(ggplotify)    |> suppressPackageStartupMessages()
+library(patchwork)    |> suppressPackageStartupMessages()
+
+
+# Each pair produces a slightly different graph. However, hopefully the distribution is similar.
+plotdist(gbs$Oki_Osa |> strand() |> runLength() |> as.numeric())
+plotdist(gbs$Oki_Bar |> strand() |> runLength() |> as.numeric())
+plotdist(gbs$Osa_Bar |> strand() |> runLength() |> as.numeric())
+
+# Fit a numeric vector (i.e., the strand run length) to a number of probability distributions
+fit_distributions <- function(vec, distributions = c("nbinom", "pois", "lnorm", "norm", "exp", "gamma", "llogis"), method="mle") {
+  lapply(distributions, function(d) {
+    fitdist(vec, d, method=method)
+  })
+}
+p_oki_osa <- gbs$Oki_Osa |> strand() |> runLength() |> as.numeric() |> fit_distributions(method="mle")
+
+# You can evaluate the different models graphically. These plots are a little busy, though.
+p1 <- as.ggplot(function() denscomp(p_oki_osa) )
+p2 <- as.ggplot(function() qqcomp(p_oki_osa) )
+p3 <- as.ggplot(function() cdfcomp(p_oki_osa) )
+p4 <- as.ggplot(function() ppcomp(p_oki_osa) )
+(p1 | p2) / (p3 | p4)
+
+p_oki_bar <- gbs$Oki_Bar |> strand() |> runLength() |> as.numeric() |> fit_distributions(method="mle")
+p1 <- as.ggplot(function() denscomp(p_oki_bar) )
+p2 <- as.ggplot(function() qqcomp(p_oki_bar) )
+p3 <- as.ggplot(function() cdfcomp(p_oki_bar) )
+p4 <- as.ggplot(function() ppcomp(p_oki_bar) )
+(p1 | p2) / (p3 | p4)
+
+
+p_osa_bar <- gbs$Osa_Bar |> strand() |> runLength() |> as.numeric() |> fit_distributions(method="mle")
+p1 <- as.ggplot(function() denscomp(p_osa_bar) )
+p2 <- as.ggplot(function() qqcomp(p_osa_bar) )
+p3 <- as.ggplot(function() cdfcomp(p_osa_bar) )
+p4 <- as.ggplot(function() ppcomp(p_osa_bar) )
+(p1 | p2) / (p3 | p4)
+
+# We can evaluate them one at a time:
+comp_plots <- function(gr, method="mle", distribution="nbinom") {
+  srl <- gr |> strand() |> runLength() |> as.numeric()
+  f <- fit_distributions(srl, distribution=distribution, method="mle")
+  p1 <- as.ggplot(function() denscomp(f))
+  p2 <- as.ggplot(function() qqcomp(f))
+  p3 <- as.ggplot(function() cdfcomp(f))
+  p4 <- as.ggplot(function() ppcomp(f))
+  (p1 | p2 ) / ( p3 | p4)
+}
+
+all_distributions <- c("nbinom", "pois", "lnorm", "exp", "gamma")
+lapply(all_distributions, function(d) comp_plots(gbs$Oki_Osa, distribution = d))
+lapply(all_distributions, function(d) comp_plots(gbs$Oki_Bar, distribution = d))
+lapply(all_distributions, function(d) comp_plots(gbs$Osa_Bar, distribution = d))
+
+# Obtain goodness-of-fit statistics for each model to see which fits data best.
+# Then we can use the best-fitting model as a probability distribution to randomly
+# induce a realistic number of "flips", generating a randomly-flipped GBreaks object.
+(gofstat(p_oki_osa))
+(gofstat(p_oki_bar))
+(gofstat(p_osa_bar))
+
+gofstat(p_oki_osa  )$aic |> which.min() |> names()
+gofstat(p_oki_bar  )$aic |> which.min() |> names()
+gofstat(p_osa_bar  )$aic |> which.min() |> names()
+
+# All 3 agree that a log-normal distribution best describes the size of 
+# 
+# randomly_flip_strand <- function(gr, seed=1992, flip_number_function=pois) {
+#   str <- strand(gr)
+#   indices <- length(gr)
+#   # The number
+#   number_of_flips <- 
+#   which.flips <- 
+#   
+# }
+# randomly_flip(gbs$Oki_Osa)
+
+detach('package:fitdistrplus')
+detach('package:survival')
+detach('package:actuar')
+detach('package:distrMod')
+detach('package:ggplotify')
+detach('package:patchwork')
+```
+
+
 # Strand proportion index
 
 Attempts to use pure proportions lead to scores drifting towards 0.5 when
